# machine-learning-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
config/: default.yaml
notebooks/: classification_example.ipynb
scripts/: streamlit_app.py
src/: __init__.py
src/machine_learning_study/: __init__.py
src/machine_learning_study/data/: __init__.py  loader.py  preprocessor.py
src/machine_learning_study/features/: __init__.py  engineer.py
src/machine_learning_study/models/: __init__.py  classifier.py  evaluator.py  regressor.py
src/machine_learning_study/pipelines/: __init__.py  base_pipeline.py  experiment_pipeline.py
src/machine_learning_study/utils/: experiment_tracker.py  logging_config.py
